service/tests/requests/snapshots/permissions/can_get_roles_read_permission@permissions.snap
---
source: tests/requests/permissions.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"id\":101,\"pid\":\"PID\",\"name\":\"roles:read\",\"description\":\"View roles\",\"createdAt\":\"DATEZ\",\"updatedAt\":\"DATEZ\"}",
)
