service/tests/requests/snapshots/permissions/can_list_permissions@permissions.snap
---
source: tests/requests/permissions.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "[{\"id\":120,\"pid\":\"PID\",\"name\":\"products:delete\",\"description\":\"Delete products\",\"createdAt\":\"DATEZ\",\"updatedAt\":\"DATEZ\"},{\"id\":119,\"pid\":\"PID\",\"name\":\"products:update\",\"description\":\"Update products\",\"createdAt\":\"DATEZ\",\"updatedAt\":\"DATEZ\"},{\"id\":118,\"pid\":\"PID\",\"name\":\"products:create\",\"description\":\"Create products\",\"createdAt\":\"DATEZ\",\"updatedAt\":\"DATEZ\"},{\"id\":117,\"pid\":\"PID\",\"name\":\"products:read\",\"description\":\"View products\",\"createdAt\":\"DATEZ\",\"updatedAt\":\"DATEZ\"},{\"id\":116,\"pid\":\"PID\",\"name\":\"categories:delete\",\"description\":\"Delete categories\",\"createdAt\":\"DATEZ\",\"updatedAt\":\"DATEZ\"},{\"id\":115,\"pid\":\"PID\",\"name\":\"categories:update\",\"description\":\"Update categories\",\"createdAt\":\"DATEZ\",\"updatedAt\":\"DATEZ\"},{\"id\":114,\"pid\":\"PID\",\"name\":\"categories:create\",\"description\":\"Create categories\",\"createdAt\":\"DATEZ\",\"updatedAt\":\"DATEZ\"},{\"id\":113,\"pid\":\"PID\",\"name\":\"categories:read\",\"description\":\"View categories\",\"createdAt\":\"DATEZ\",\"updatedAt\":\"DATEZ\"},{\"id\":112,\"pid\":\"PID\",\"name\":\"users:delete\",\"description\":\"Delete users\",\"createdAt\":\"DATEZ\",\"updatedAt\":\"DATEZ\"},{\"id\":111,\"pid\":\"PID\",\"name\":\"users:update\",\"description\":\"Update users\",\"createdAt\":\"DATEZ\",\"updatedAt\":\"DATEZ\"},{\"id\":110,\"pid\":\"PID\",\"name\":\"users:create\",\"description\":\"Create users\",\"createdAt\":\"DATEZ\",\"updatedAt\":\"DATEZ\"},{\"id\":109,\"pid\":\"PID\",\"name\":\"users:read\",\"description\":\"View users\",\"createdAt\":\"DATEZ\",\"updatedAt\":\"DATEZ\"},{\"id\":105,\"pid\":\"PID\",\"name\":\"permissions:read\",\"description\":\"View permissions\",\"createdAt\":\"DATEZ\",\"updatedAt\":\"DATEZ\"},{\"id\":108,\"pid\":\"PID\",\"name\":\"permissions:delete\",\"description\":\"Delete permissions\",\"createdAt\":\"DATEZ\",\"updatedAt\":\"DATEZ\"},{\"id\":106,\"pid\":\"PID\",\"name\":\"permissions:create\",\"description\":\"Create permissions\",\"createdAt\":\"DATEZ\",\"updatedAt\":\"DATEZ\"},{\"id\":104,\"pid\":\"PID\",\"name\":\"roles:delete\",\"description\":\"Delete roles\",\"createdAt\":\"DATEZ\",\"updatedAt\":\"DATEZ\"},{\"id\":102,\"pid\":\"PID\",\"name\":\"roles:create\",\"description\":\"Create roles\",\"createdAt\":\"DATEZ\",\"updatedAt\":\"DATEZ\"},{\"id\":107,\"pid\":\"PID\",\"name\":\"permissions:update\",\"description\":\"Update permissions\",\"createdAt\":\"DATEZ\",\"updatedAt\":\"DATEZ\"},{\"id\":103,\"pid\":\"PID\",\"name\":\"roles:update\",\"description\":\"Update roles\",\"createdAt\":\"DATEZ\",\"updatedAt\":\"DATEZ\"},{\"id\":101,\"pid\":\"PID\",\"name\":\"roles:read\",\"description\":\"View roles\",\"createdAt\":\"DATEZ\",\"updatedAt\":\"DATEZ\"}]",
)
