service/tests/requests/snapshots/permissions/can_list_permissions_when_role_does_not_exist@permissions.snap
---
source: tests/requests/permissions.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "[]",
)
