service/tests/requests/snapshots/permissions/cannot_get_permission_when_pid_does_not_exist@permissions.snap
---
source: tests/requests/permissions.rs
expression: "(response.status_code(), response.text())"
---
(
    404,
    "{\"error\":\"Entity not found\",\"code\":\"entity_not_found\"}",
)
