service/tests/requests/snapshots/permissions/cannot_get_permission_when_pid_is_invalid@permissions.snap
---
source: tests/requests/permissions.rs
expression: "(response.status_code(), response.text())"
---
(
    400,
    "{\"error\":\"Invalid URL: Cannot parse `pid` with value `not-a-uuid`: UUID parsing failed: invalid character: found `n` at 0\",\"code\":\"invalid_path_parameter\"}",
)
