service/tests/requests/snapshots/permissions/cannot_get_permission_without_credentials@permissions.snap
---
source: tests/requests/permissions.rs
expression: "(response.status_code(), response.text())"
---
(
    401,
    "{\"error\":\"Authentication is required. Please sign in and try again.\",\"code\":\"missing_credentials\"}",
)
