service/tests/requests/snapshots/permissions/cannot_list_permissions_without_permission@permissions.snap
---
source: tests/requests/permissions.rs
expression: "(response.status_code(), response.text())"
---
(
    403,
    "{\"error\":\"You do not have permission to perform this action.\",\"code\":\"forbidden\"}",
)
